banner text added

--- a/style.css
+++ b/style.css
@@ -60,6 +60,15 @@ a {
 .col {
     width: 100%;
     height: 400px;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    text-align: center;
+    align-items: center;
+}
+
+.col>p {
+    width: 60%;
 }
 
 #btn-login {
